--- a/desecure-vault-frontend/src/styles/global.css
+++ b/desecure-vault-frontend/src/styles/global.css
@@ -36,3 +36,17 @@ body {
   margin: 0;
   padding: 0;
 }
+
+::-webkit-scrollbar {
+  width: 8px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #6b7280;
+  border-radius: 50px; 
+  border: 2px solid transparent;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
